--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --bgColor-primary:  #F7F7F7;
   --bgColor-accent: #E6DACE;
   --color-accent:  #308B8E;
+  --color-accent-hover:#78B4B6;
   --bgColor-accent: #FF8D8D;
 }
 body {
