--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,7 +1,7 @@
 .section_footer{
     padding-top: 23px;
     padding-bottom: 23px;
-    border-top: 1px solid black;
+    
 }
 .footer{
     display: flex;
@@ -11,13 +11,19 @@
         font-size: 10px;
         line-height: 12px;
         text-transform: uppercase;
+        display: flex;
+        align-items: flex-end;
     }
     &_list{
         font-size: 16px;
         line-height: 20px;
         list-style-type: none;
         display: flex;
+        flex-wrap: wrap;
         gap: 55.5px;
+        @media  screen and (min-width:768px) {
+          flex-wrap: nowrap;  
+        }
     }
     &_item {
         display: flex;
@@ -41,9 +47,10 @@
 .list_link{
     list-style-type: none;
     display: flex;
-    gap:6px;
+    gap: 15px;
 }
 .item_link {
+
     &_telegram{
         background-color: aquamarine;
     }
