--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -6,13 +6,38 @@
 .footer{
     display: flex;
     justify-content: space-between;
+    flex-direction: column-reverse;
+    gap: 32px;
+
+    @media screen and (min-width: 768px){
+        flex-direction: column-reverse;
+        gap:32px;
+        justify-content: center;
+    }
+    @media screen and (min-width: 1200px) {
+        gap:0;
+        flex-direction:row;
+    }
 
     &_secured{
-        font-size: 10px;
+        font-size: 9px;
         line-height: 12px;
         text-transform: uppercase;
         display: flex;
         align-items: flex-end;
+        @media screen and (min-width:768px){
+            font-size: 10px;
+            margin: 0 auto;
+        }
+        @media screen and (min-width:1200px) {
+            margin: 0;
+        }
+        &_br{
+            display: none;
+            @media screen and (min-width: 1200px) {
+                display: inline;
+            }
+        }
     }
     &_list{
         font-size: 16px;
@@ -20,9 +45,11 @@
         list-style-type: none;
         display: flex;
         flex-wrap: wrap;
-        gap: 55.5px;
+        gap: 24px;
+        
         @media  screen and (min-width:768px) {
-          flex-wrap: nowrap;  
+            flex-wrap: nowrap; 
+            gap: 55.5px;
         }
     }
     &_item {
@@ -32,16 +59,16 @@
     }
     &_title{
     font-size: 16px;
-    line-height: 20px;
+    line-height: 19.5px;
     }
     &_tel{
     font-size: 16px;
-    line-height: 20px;
+    line-height: 19.5px;
     text-transform: uppercase;
     }
     &_mail {
         font-size: 16px;
-        line-height: 20px;
+        line-height: 19.5px;
     }
 }
 .list_link{
@@ -50,14 +77,8 @@
     gap: 15px;
 }
 .item_link {
-
     &_telegram{
         background-color: aquamarine;
     }
-    &_linkedin {
-        background-color: hotpink;
-    }
-    &_git {
-        background-color:red;
-    }
+   
 }
