--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,11 +1,18 @@
 .section_header{
-    padding-top: 33.5px ;
-    padding-bottom: 33.5px;
+    padding-top: 16.5px;
+    padding-bottom: 16.5px;
+    
+    @media screen and (min-width:768px) {
+        padding-top: 33.5px ;
+        padding-bottom: 33.5px;
+    }
+  
   
 }
 .header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .info{
     display: flex;
@@ -51,6 +58,15 @@
 }
 .navigation{
     text-transform: uppercase;  
+
+  
+    &_burger{
+        background-color: transparent;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        @media screen and (min-width:1200px) {display: none;}
+    }
 
     &_list{
         display: none;
