--- a/src/components/Contact/contact.module.scss
+++ b/src/components/Contact/contact.module.scss
@@ -22,12 +22,46 @@
 }
 .contact_list{
     list-style: none;
+    @media screen and (min-width:768px){
+        display: flex;
+        flex-wrap: wrap;
+        gap:65px;
+    }
 }
 .contact_item{
     font-size: 24px;
     margin-top: 32px;
 }
 .contact_title{
-
+    font-size: 24px;
+    margin-bottom: 12px;
 }
-.contact_tel{}
+.contact_tel{
+    font-size: 24px;  
+}
+.contact_mail{
+    font-size: 24px;
+}
+.wrap_download{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 48px;
+}
+.download{
+    background: var(--color-accent);
+    color:var(--color-white);
+    padding: 8px 15px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.list_link{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap:10px;
+}
