--- a/src/components/Contact/contact.module.scss
+++ b/src/components/Contact/contact.module.scss
@@ -2,23 +2,44 @@
     padding-top: 56px;
     padding-bottom: 56px;
     background-color: var(--bgColor-primary);
-
     @media screen and (min-width: 768px) {
-    padding-top: 72px;
-    padding-bottom: 72px;
+        padding-top: 72px;
+        padding-bottom: 72px;
     }
 }
 .block{
     padding: 0 24px 24px 24px;
     background-color: white;
+    @media screen and (min-width:768px){
+        padding: 0 60px 60px 60px;
+    }
+    @media screen and (min-width:1200px){
+        padding: 0 96px 96px 96px;
+    }
 }
-.contact_info{
+.contact_info_wrap{
     background-color: var(--bgColor-accent);
-    color:var(--color-white);
     border-radius: 0px 0px 8px 8px;
     padding: 26px 27px;
+    @media screen and (min-width:768px) {
+        padding: 26px 49px 25px 73px;
+    }
+    @media screen and (min-width:1200px) {
+        padding: 26px 145px; 
+    }
+}
+.contact_info{
+    color: var(--color-white);
     font-size: 24px;
     font-weight: 600;
+    text-align: center;
+    @media screen and (min-width:768px) {
+        font-size: 32px;
+    }
+
+    @media screen and (min-width:1200px) {
+        // margin:0 auto;
+    }
 }
 .contact_list{
     list-style: none;
@@ -27,14 +48,35 @@
         flex-wrap: wrap;
         gap:65px;
     }
+    @media screen and (min-width:1200px){
+        margin-top: 72px;
+        gap:63.5px;
+    }
 }
 .contact_item{
     font-size: 24px;
     margin-top: 32px;
+    @media screen and (min-width:768px){
+        margin-top: 48px;
+    }
+    @media screen and (min-width:1200px) {
+        margin-top: 0;
+    }
+}
+.contact_item_find{
+    margin-top: 32px;
+    @media screen and (min-width:768px){
+        margin-top: 0;
+    }
+    
 }
 .contact_title{
     font-size: 24px;
     margin-bottom: 12px;
+}
+.contact_find{
+    font-size: 24px;
+    margin-bottom: 8px;
 }
 .contact_tel{
     font-size: 24px;  
@@ -47,17 +89,30 @@
     justify-content: center;
     align-items: center;
     margin-top: 48px;
+    @media screen and (min-width:768px) {
+        margin-top: 126px;
+    }
+    @media screen and (min-width:1200px) {
+        margin-top: 48px;
+    }
 }
 .download{
     background: var(--color-accent);
     color:var(--color-white);
-    padding: 8px 15px;
-    outline: none;
-    border: none;
+    padding: 8px 15.5px;
+    outline: transparent;
+    border: transparent;
     border-radius: 8px;
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
+    cursor: pointer;
+    @media screen and (min-width:768px){
+        padding: 8px 44.5px;
+    }
+    &:hover {
+        background: #78B4B6;
+    }
 }
 .list_link{
     list-style: none;
@@ -65,3 +120,20 @@
     align-items: center;
     gap:10px;
 }
+.icons{
+    display: block;
+    fill: var(--color-accent);
+    width: 48px;
+    height: 48px;
+    @media screen and (min-width: 1200px) {
+        width: 32px;
+        height: 32px;
+    }
+}
+
+
+
+// .telegram{
+//     display: block;
+//     fill: var(--color-accent);
+// }
