--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -53,6 +53,14 @@
     margin-top: 48px;
     padding: 0 24px 24px;
     box-shadow: 4px 6px 8px 0px rgba(0, 0, 0, 0.25);
+    @media screen and (min-width:768px) {
+        padding: 0 60px 60px;
+    }
+     @media screen and (min-width:1200px) {
+        padding: 0 96px 96px;
+    }
+
+
 
     &_title{
         display: flex;
@@ -64,9 +72,7 @@
             width: 380px;
             padding: 28px 69px;
         }
-        @media screen and (min-width:1200px) {
-
-        }
+       
 
     }
     &_icon{
@@ -80,8 +86,9 @@
 .title{
     font-size: 24px;
     font-weight: 600;
+    text-align: center;
     @media screen and (min-width:768px) {
-        font-size: 28px;
+        font-size: 26px;
     }
 }
 .library{
