--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -16,6 +16,9 @@ height:100%;
 // transform:translate(-50%,-50%);
 background-color: var(--bgColor-primary);
 padding-top: 72px;
+    @media screen and (min-width:768px){
+        top: 95px;
+    }
 }
 .navigation_list{
     display: flex;
@@ -27,4 +30,7 @@ padding-top: 72px;
     font-size: 16px;
     text-transform: uppercase;
     text-align: center;
+        @media screen and (min-width:768px) {
+            font-size: 20px;
+        }
 }
