--- a/src/components/Intro/intro.module.scss
+++ b/src/components/Intro/intro.module.scss
@@ -1,22 +1,23 @@
 .section_intro {
   padding-top: 24px;
   padding-bottom: 40px;
-  background:var(--bgColor-primary);
-  // background-size: cover;
+  background: var(--bgColor-primary);
 
   &::before {
-      content: "";
-      position: absolute;
-      top: 69px;
-      left: 0;
-      width: 65%;
-      height: 85%;
-      z-index: 0;
-      background-color: var(--bgColor-subtitle);
-      @media screen and (min-width: 768px) {
-        top: 95px;
-      }
+    content: "";
+    position: absolute;
+    top: 69px;
+    left: 0;
+    width: 65%;
+    height: 42%;
+    z-index: 0;
+    background-color: var(--bgColor-subtitle);
+
+    @media screen and (min-width: 768px) {
+      top: 95px;
+      height: 89%;
     }
+  }
 
   @media screen and (min-width: 768px) {
     padding-top: 43px;
@@ -26,19 +27,21 @@
   @media screen and (min-width: 1200px) {
     padding-top: 99px;
     padding-bottom: 99px;
-    background:linear-gradient(to right,var(--bgColor-subtitle) 40%,var(--bgColor-primary)40% );
+    background: linear-gradient(
+      to right,
+      var(--bgColor-subtitle) 40%,
+      var(--bgColor-primary) 40%
+    );
     &::before {
-          display: none;
-        }
-      
+      display: none;
+    }
   }
-  
 }
 
 .intro {
   display: flex;
   flex-direction: column;
-  gap: 64px;
+  gap: 55px;
   @media screen and (min-width: 768px) {
     gap: 91px;
     justify-content: center;
@@ -51,12 +54,21 @@
 
 .photo {
   margin: 0 auto;
-  z-index:2;
-
+  z-index: 2;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  width: 166px;
+  height: 249px;
+  @media screen and (min-width: 768px) {
+    width: 344px;
+    height: 492px;
+  }
   @media screen and (min-width: 1200px) {
     margin: 0;
+    width: 338px;
+    height: 488px;
   }
 }
+
 .intro_content {
   display: flex;
   flex-direction: column;
