--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -71,7 +71,8 @@
     color: var(--color-accent);
     display: none;
     @media screen and (min-width: 768px) {
-      display: block;
+      display: flex;
+      align-items: center;
     }
   }
 }
