--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -26,6 +26,7 @@
     background-color: var(--bgColor-subtitle);
     border-radius: 0px 0px 8px 8px;
     padding: 20px 59px;
+    justify-content: center;
     @media screen and (min-width: 768px) {
       width: 380px;
       padding: 28px 69px;
