--- a/src/components/Resume/resume.module.scss
+++ b/src/components/Resume/resume.module.scss
@@ -28,6 +28,7 @@
     padding: 20px;
     border-radius: 0px 0px 8px 8px;
     color: var(--color-white);
+    text-align: center;
     @media screen and (min-width: 768px) {
       width: 380px;
       padding: 28px 69px;
@@ -35,6 +36,13 @@
   }
   &_list {
     list-style-type: none;
+    margin-top: 32px;
+    @media screen and (min-width: 768px) {
+      margin-top: 48px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-top: 72px;
+    }
   }
   &_item {
     margin-top: 32px;
