--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -53,7 +53,7 @@
   margin-top: 32px;
   font-size: 22px;
   letter-spacing: 2.2px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .description {
   margin-top: 16px;
